--- a/EBCEYS.ContainersEnvironment/EBCEYS.ContainersEnvironment.csproj
+++ b/EBCEYS.ContainersEnvironment/EBCEYS.ContainersEnvironment.csproj
@@ -13,6 +13,20 @@
     <PackageTags>docker;containers;docker-compose;docker-containers;dotnet;dotnet8;csharp</PackageTags>
     <IncludeSymbols>True</IncludeSymbols>
     <SymbolPackageFormat>snupkg</SymbolPackageFormat>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
+    <PackageLicenseFile>LICENSE.txt</PackageLicenseFile>
+    <RepositoryUrl>https://github.com/EBCEYS/EBCEYS.ContainersEnvironment</RepositoryUrl>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Include="..\LICENSE.txt">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
+    <None Include="..\README.md">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
+  </ItemGroup>
 
 </Project>
